Solve footer.component.scss flex wrap

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -90,11 +90,13 @@ footer {
         ul {
           display: flex;
           flex-direction: row;
+          flex-wrap: wrap;
         }
       }
 
       .sign-in {
         display: flex;
+        flex-wrap: wrap;
         justify-content: space-between;
         gap: 0.4rem;
 
